@@ -17,7 +17,7 @@ Espeak libraries and header files
 	cause asterisk to crash. If upgrading is not an option patch your current 
 	version of epseak with the espeak.patch provided here.
 libsndfile libraries and header files
-libresample libraries and header files
+libsamplerate libraries and header files
 
 
 ------------
