@@ -1,3 +1,7 @@
+2011-27-08 Lefteris Zafiris <zaf.000@gmail.com> - 2.1rc1
+	Switched to libsamplerate for resampling.
+	Major code cleanup. 
+
 2011-19-08 Lefteris Zafiris <zaf.000@gmail.com> - 2.0
     Added option for generating 16000Hz sound files.
 
